ghc-4335c07/testsuite/tests/typecheck/should_compile/T2412A.hs

module T2412A where

import {-# SOURCE #-} T2412 ( Baz )

type Bar = Baz
