ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail162.hs



-- Kind error message should not contain bangs

module ShouldFail where

import Foreign.ForeignPtr

data Foo = Foo {-# UNPACK #-} !(ForeignPtr)

 
